--- a/main_style.css
+++ b/main_style.css
@@ -17,11 +17,18 @@ body {
     display: flex;
     align-items: center;
     margin: 10px;
+    font-size: 35px;
+    color: white;
+    font-weight: 900;
 }
 #navigation {
     display: flex;
-    gap: 15px
-
+    gap: 15px;
+    color: #e5e7eb;
+}
+#navigation > a {
+    text-decoration: none;
+    color: #e5e7eb;
 }
 #second_section {
     display: flex;
@@ -38,7 +45,7 @@ body {
     display: flex;
     flex-flow: column nowrap;
     gap:7px;
-    flex: 0.4;
+    flex: 0.7;
 }
 #second_section > .content > p {
     font-size: 15px;
@@ -48,12 +55,25 @@ body {
     align-self:flex-start;
     width: auto;
 }
-
+.images {
+    display: flex;
+}
+.images > * {
+    border: 2px solid white;
+}
+.images :first-child {
+    border-right: none;
+    border-radius: 5px 0px 0px 5px;
+}
+.images :last-child {
+    border-left:  none;
+    border-radius: 0px 5px 5px 0px;
+}
 .about_cat {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 .about_cat > h2 {
     margin: 30px;
@@ -62,7 +82,6 @@ body {
     display: flex;
     flex-flow: row wrap;
     gap: 40px;
-
 }
 
 .ability {
@@ -72,11 +91,58 @@ body {
     flex: 1;
     text-align: center;
     width: 158px;
+    color: #1f2937;
+}
+.ability > p {
+    color: rgb(104, 102, 102);
+    margin-top: 4px;
 }
 .ability > img {
     border: 4px solid #6aa3fe;
     border-radius: 15px;
     box-shadow: 0 0 6px black;
+    margin-bottom: 8px;
+}
+
+#third_section {
+    display: flex;
+    justify-content: center;
+    padding: 45px 0;
+    background-color: #e5e7eb;
+}
+#quote {
+    
+}
+#quote > em {
+    color: #1f2937;
+    font-size: 36px;
+}
+#quote > p {
+    font-size: 21px;
+    font-weight: bold;
+    color: #1f2937;
+    justify-self:flex-end
+}
+#fourth_section {
+    display: flex;
+}
+
+.give_food_panel {
+    display: flex;
+    justify-content: space-evenly;
+    margin:45px 0;
+    flex: 1;
+    background-color: #3882f6;
+    align-items: center;
+    height: 100px;
+    color: white;
+    font-size: 18px;
+    border-radius: 7px;
+    padding: 20px 0px
+}
+
+.give_food_panel button {
+    border: 2px solid white
 }
 
 #footer {
